--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^6.2.0
   flutter_svg: ^2.0.4
+  font_awesome: ^5.10.1
 
 dev_dependencies:
   flutter_test:
