--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^6.2.0
   flutter_svg: ^2.0.4
   font_awesome_flutter: ^10.4.0
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
