--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.4
   font_awesome_flutter: ^10.4.0
   dropdown_search: ^5.0.6
+  dio: ^5.0.3
 
 dev_dependencies:
   flutter_test:
