--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   dropdown_search: ^5.0.6
   dio: ^5.0.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
