--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   dropdown_search: ^5.0.6
   dio: ^5.0.3
   dartz: ^0.10.1
+  awesome_dialog: ^3.0.2
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
